--- a/gui/style.css
+++ b/gui/style.css
@@ -102,6 +102,17 @@ iframe{
  width:100%;
  height:auto;
  frameborder:0;}
+.axut{
+ color:white;
+ background-color:DodgerBlue;
+ border-style:none;
+ border-radius:0;
+ padding: 2px 6px;
+ font-size:12px;}
+.bxut{
+ cursor:pointer;}
+.bxut:hover{
+ background-color:Coral;}
 .address{
  height:26px;
  width:100%;}
@@ -199,6 +210,10 @@ iframe{
  padding:1px;
  margin:1px;
  margin-right:1px;}
+.left{
+ float:left;}
+.right{
+ float:right;}
 #bgnote{
  border-radius:6px;
  background:#FF82C0;
@@ -221,5 +236,5 @@ input,select,textarea{
 -webkit-box-sizing:border-box;
 -moz-box-sizing:border-box;
 -ms-box-sizing:border-box;
-box-sizing: border-box;
+box-sizing:border-box;
 }
