--- a/gui/style.css
+++ b/gui/style.css
@@ -6,24 +6,32 @@ body.team{
  background-color:coral;}
 body.private{
  background-color:brown;}
+hr.cp{
+ border-style:solid;
+ border-color:#E6E6E6;}
+iframe{
+ width:100%;
+ height:auto;
+ frameborder:0;}
+/*=======================================*/
 div.body{
  font-family:GARAMOND;
  background-color:white;
  border-color:white;
  border-radius:10px;
  position:relative;
- padding:5px;
  width:95%;
- height:95%;}
+ height:95%;
+ padding:5px;}
 div.textarea{
  border:1px;
  border-color:grey;
  border-style:solid;
  border-radius:10px;
  position:relative;
- padding:5px;
  width:95%;
- height:95%;}
+ height:95%;
+ padding:5px;}
 div.language{
  color:#AAAAAA;
  font-size:x-small;}
@@ -70,6 +78,7 @@ img.thumbs{
  border-radius:8px;
  width:64px;
  height:48px;}
+/*=======================================*/
 input.noborder{
  display:block;
  border:none;
@@ -93,13 +102,7 @@ textarea.code{
  white-space:pre;
  overflow-wrap:normal;
  overflow-x:scroll;}
-hr.cp{
- border-style:solid;
- border-color:#E6E6E6;}
-iframe{
- width:100%;
- height:auto;
- frameborder:0;}
+/*=======================================*/
 .turn{
  background-image:url(turn.gif);
  background-size:16px;
@@ -170,6 +173,7 @@ iframe{
  height:16px;
  border:none;
  cursor:pointer;}
+/*=======================================*/
 .onmouse{
  border:none;
  cursor:pointer;}
@@ -190,8 +194,8 @@ iframe{
  background-color:DodgerBlue;
  border-style:none;
  border-radius:0;
- padding: 2px 6px;
- font-size:12px;}
+ font-size:12px;
+ padding: 2px 6px;}
 .bxut{
  cursor:pointer;}
 .bxut:hover{
@@ -244,83 +248,73 @@ iframe{
 .textwarn{
  color:#FF0000;
  font-size:medium;}
+/*=======================================*/
 .buttoner{
- width:240px;}
+ width:240px;
+ margin:auto;
+ padding:auto;}
 .button{
  background-color:#4D7A9F;
  border-radius:6px;
  width:220px;
  border:none;
  color:white;
- padding:5px;
  text-align:left;
  text-decoration:none;
  font-family:GARAMOND;
  display:inline-block;
- margin:1px;
- cursor:pointer;}
-.obutton{
- background-color:#f0ad26;
- border-radius:6px;
- width:220px;
- border:none;
- color:grey;
- text-align:center;
- text-decoration:bold;
- font-family:GARAMOND;
- display:inline-block;
+ cursor:pointer;
  margin:2px;
- padding:5px;
- cursor:pointer;}
-.gbutton{
- background-color:#728a71;
+ padding:5px;}
+.label{
+ background-color:#A5AC20;
  border-radius:6px;
  width:220px;
  border:none;
  color:white;
- text-align:center;
- text-decoration:bold;
- font-family:GARAMOND;
- display:inline-block;
- margin:2px;
- padding:5px;
- cursor:pointer;}
-.ohead{
- background-color:#f0ad26;
- border-radius:6px;
- width:220px;
- border:none;
- color:grey;
- text-align:center;
- text-decoration:bold;
+ text-align:left;
  font-family:GARAMOND;
  display:inline-block;
  margin:2px;
  padding:5px;}
-.ghead{
- background-color:#728a71;
+.ltlab{
+ background-color:lightblue;
  border-radius:6px;
  width:220px;
  border:none;
- color:white;
- text-align:center;
- text-decoration:bold;
+ color:black;
+ text-align:left;
  font-family:GARAMOND;
  display:inline-block;
  margin:2px;
  padding:5px;}
+.trlab{
+ color:black;
+ text-align:left;
+ font-family:GARAMOND;
+ margin:2px;
+ padding:5px;}
+/*=======================================*/
+/*---------------------------------------*/
 .obox{
  background-image:url(obg.gif);
  border-radius:25px;
  border:4px solid #f0ad26;
- width:240px;
+ width:254px;
  padding:10px;}
 .gbox{
  background-image:url(gbg.gif);
  border-radius:25px;
  border:4px solid #728a71;
- width:240px;
+ width:254px;
  padding:10px;}
+.vbox{
+ background-image:url(vbg.gif);
+ border-radius:25px;
+ border:4px solid #957ea6;
+ width:254px;
+ padding:10px;}
+/*---------------------------------------*/
 .ob{
  white-space:nowrap;
  text-overflow:ellipsis;
@@ -351,12 +345,6 @@ iframe{
  outline:none;
  border:1px solid #f0ad26;
  color:#728a71;}
-.vbox{
- background-image:url(vbg.gif);
- border-radius:25px;
- border:4px solid #957ea6;
- width:240px;
- padding:10px;}
 .vb{
  white-space:nowrap;
  text-overflow:ellipsis;
@@ -372,23 +360,63 @@ iframe{
  outline:none;
  border:1px solid #f0ad26;
  color:#957ea6;}
-.vbutton{
- background-color:#957ea6;
+/*---------------------------------------*/
+.obutton{
+ background-color:#f0ad26;
  border-radius:6px;
- width:220px;
+ width:230px;
+ border:none;
+ color:grey;
+ text-align:center;
+ text-decoration:bold;
+ font-family:GARAMOND;
+ display:inline-block;
+ cursor:pointer;
+ margin:2px;
+ padding:5px;}
+.gbutton{
+ background-color:#728a71;
+ border-radius:6px;
+ width:230px;
  border:none;
  color:white;
  text-align:center;
  text-decoration:bold;
  font-family:GARAMOND;
  display:inline-block;
+ cursor:pointer;
  margin:2px;
- padding:5px;
- cursor:pointer;}
-.vhead{
+ padding:5px;}
+.vbutton{
  background-color:#957ea6;
  border-radius:6px;
- width:220px;
+ width:230px;
+ border:none;
+ color:white;
+ text-align:center;
+ text-decoration:bold;
+ font-family:GARAMOND;
+ display:inline-block;
+ cursor:pointer;
+ margin:2px;
+ padding:5px;}
+/*---------------------------------------*/
+.ohead{
+ background-color:#f0ad26;
+ border-radius:6px;
+ width:230px;
+ border:none;
+ color:grey;
+ text-align:center;
+ text-decoration:bold;
+ font-family:GARAMOND;
+ display:inline-block;
+ margin:2px;
+ padding:5px;}
+.ghead{
+ background-color:#728a71;
+ border-radius:6px;
+ width:230px;
  border:none;
  color:white;
  text-align:center;
@@ -397,40 +425,26 @@ iframe{
  display:inline-block;
  margin:2px;
  padding:5px;}
-.label{
- background-color:#A5AC20;
+.vhead{
+ background-color:#957ea6;
  border-radius:6px;
- width:220px;
+ width:230px;
  border:none;
  color:white;
- padding:5px;
- text-align:left;
+ text-align:center;
+ text-decoration:bold;
  font-family:GARAMOND;
  display:inline-block;
- margin:1px;}
-.ltlab{
- background-color:lightblue;
- border-radius:6px;
- width:220px;
- border:none;
- color:black;
- padding:5px;
- text-align:left;
- font-family:GARAMOND;
- display:inline-block;
- margin:1px;}
-.trlab{
- color:black;
- padding:5px;
- text-align:left;
- font-family:GARAMOND;
- margin:1px;}
+ margin:2px;
+ padding:5px;}
+/*---------------------------------------*/
+/*=======================================*/
 .note{
  border-radius:4px;
  background:#FFD2A6;
- padding:1px;
+ margin-right:1px;
  margin:1px;
- margin-right:1px;}
+ padding:1px;}
 .left{
  float:left;}
 .right{
@@ -438,6 +452,12 @@ iframe{
 .center{
  display:table;
  margin:auto;}
+.active{
+ color:#c2256e;}
+.passive{
+ color:#2d4f37;}
+.disable{
+ color:#b8b8b8;}
 #bgnote{
  border-radius:6px;
  background:#FF82C0;
