--- a/gui/style.css
+++ b/gui/style.css
@@ -424,6 +424,7 @@ textarea.code{
  text-align:center;
  text-decoration:bold;
  font-family:GARAMOND;
+ font-size:14px;
  display:inline-block;
  margin:2px;
  padding:5px;}
@@ -436,6 +437,7 @@ textarea.code{
  text-align:center;
  text-decoration:bold;
  font-family:GARAMOND;
+ font-size:14px;
  display:inline-block;
  margin:2px;
  padding:5px;}
@@ -448,6 +450,7 @@ textarea.code{
  text-align:center;
  text-decoration:bold;
  font-family:GARAMOND;
+ font-size:14px;
  display:inline-block;
  margin:2px;
  padding:5px;}
