--- a/gui/mstyle.css
+++ b/gui/mstyle.css
@@ -3,9 +3,9 @@ body.public{
 body.group{
  background-color:darkgrey;}
 body.team{
- background-color:coral;}
+ background-color:lightgrey;}
 body.private{
- background-color:brown;}
+ background-color:white;}
 hr.cp{
  border-style:solid;
  border-color:#E6E6E6;}
@@ -20,8 +20,8 @@ div.body{
  border-color:white;
  border-radius:10px;
  position:relative;
- width:100%;
- height:100%;
+ width:95%;
+ height:95%;
  padding:5px;}
 div.textarea{
  border:1px;
@@ -29,8 +29,8 @@ div.textarea{
  border-style:solid;
  border-radius:10px;
  position:relative;
- width:100%;
- height:100%;
+ width:95%;
+ height:95%;
  padding:5px;}
 div.language{
  color:#AAAAAA;
