--- a/gui/bstyle.css
+++ b/gui/bstyle.css
@@ -20,8 +20,8 @@ div.body{
  border-color:white;
  border-radius:10px;
  position:relative;
- width:95%;
- height:95%;
+ width:100%;
+ height:100%;
  padding:5px;}
 div.textarea{
  border:1px;
@@ -29,8 +29,8 @@ div.textarea{
  border-style:solid;
  border-radius:10px;
  position:relative;
- width:95%;
- height:95%;
+ width:100%;
+ height:100%;
  padding:5px;}
 div.language{
  color:#AAAAAA;
@@ -306,6 +306,12 @@ img.thumbs{
  color:#2d4f37;}
 .disable{
  color:#b8b8b8;}
+.maxsize{
+ max-width:100%;
+ height:auto;}
+.fullsize{
+ width:100%;
+ height:auto;}
 input,select,textarea{
 -webkit-box-sizing:border-box;
 -moz-box-sizing:border-box;
